# mongodb-prisma-schema

./: Cargo.toml  README.md  schema-array.json  schema.json
.github/workflows/: test.yml
node/: combined-schema.json  index.test.ts  index.ts  jest.config.cjs  merger.test.ts  merger.ts  package-lock.json  package.json  parser.test.ts  parser.ts  schema.prisma  tsconfig.json  utils.ts
src/: clapper.rs  main.rs  merger.rs  schema.rs
