[package]
name = "mongodb-prisma-schema"
authors = ["Shaun Hamilton"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
futures-util = "0.3.27"
mongodb = "2.4.0"
serde_json = "1.0.94"
tokio = "1.26.0"
